corrected the align items on icons/text

--- a/src/styles/components/_how-it-works.scss
+++ b/src/styles/components/_how-it-works.scss
@@ -26,11 +26,9 @@
     &-flex{
       display: flex;
       align-items: center;
+      margin-bottom: 2rem;
       &-img {
         margin-right: 2rem;
-      }
-      &-text {
-        margin-bottom: 2rem;
       }
     }
     &-blue {
